--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -58,6 +58,7 @@ set(publicHeaders
         "threepp/geometries/ConeGeometry.hpp"
         "threepp/geometries/CylinderGeometry.hpp"
         "threepp/geometries/DecalGeometry.hpp"
+        "threepp/geometries/EdgesGeometry.hpp"
         "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
@@ -227,6 +228,7 @@ set(sources
         "threepp/geometries/CircleGeometry.cpp"
         "threepp/geometries/CylinderGeometry.cpp"
         "threepp/geometries/DecalGeometry.cpp"
+        "threepp/geometries/EdgesGeometry.cpp"
         "threepp/geometries/LatheGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
