--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ set(publicHeaders
         "threepp/geometries/CylinderGeometry.hpp"
         "threepp/geometries/DecalGeometry.hpp"
         "threepp/geometries/EdgesGeometry.hpp"
+        "threepp/geometries/ExtrudeGeometry.hpp"
         "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
@@ -229,6 +230,7 @@ set(sources
         "threepp/geometries/CylinderGeometry.cpp"
         "threepp/geometries/DecalGeometry.cpp"
         "threepp/geometries/EdgesGeometry.cpp"
+        "threepp/geometries/ExtrudeGeometry.cpp"
         "threepp/geometries/LatheGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
