Add URL loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 find_package(glfw3 CONFIG REQUIRED)
 find_package(glad CONFIG REQUIRED)
+find_package(CURL CONFIG REQUIRED)
 find_package(nlohmann_json CONFIG)
 find_package(assimp CONFIG QUIET)
 find_package(stb CONFIG QUIET)
