--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019]
+        os: [windows-2019, windows-2022]
 
     steps:
       - uses: actions/checkout@v3
