--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -228,6 +228,8 @@ set(sources
         "threepp/extras/core/Path.cpp"
         "threepp/extras/core/ShapePath.cpp"
         "threepp/extras/curves/CatmullRomCurve3.cpp"
+        "threepp/extras/curves/CubicBezierCurve.cpp"
+        "threepp/extras/curves/CubicBezierCurve3.cpp"
         "threepp/extras/curves/EllipseCurve.cpp"
         "threepp/extras/curves/LineCurve.cpp"
         "threepp/extras/curves/LineCurve3.cpp"
