--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,8 +60,10 @@ set(publicHeaders
         "threepp/geometries/DecalGeometry.hpp"
         "threepp/geometries/EdgesGeometry.hpp"
         "threepp/geometries/ExtrudeGeometry.hpp"
+        "threepp/geometries/IcosahedronGeometry.hpp"
         "threepp/geometries/LatheGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
+        "threepp/geometries/PolyhedronGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
         "threepp/geometries/ShapeGeometry.hpp"
         "threepp/geometries/SphereGeometry.hpp"
@@ -246,8 +248,10 @@ set(sources
         "threepp/geometries/DecalGeometry.cpp"
         "threepp/geometries/EdgesGeometry.cpp"
         "threepp/geometries/ExtrudeGeometry.cpp"
+        "threepp/geometries/IcosahedronGeometry.cpp"
         "threepp/geometries/LatheGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
+        "threepp/geometries/PolyhedronGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
         "threepp/geometries/ShapeGeometry.cpp"
         "threepp/geometries/SphereGeometry.cpp"
