--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,6 +57,7 @@ set(publicHeaders
         "threepp/geometries/CapsuleGeometry.hpp"
         "threepp/geometries/CircleGeometry.hpp"
         "threepp/geometries/ConeGeometry.hpp"
+        "threepp/geometries/ConvexGeometry.hpp"
         "threepp/geometries/CylinderGeometry.hpp"
         "threepp/geometries/DecalGeometry.hpp"
         "threepp/geometries/EdgesGeometry.hpp"
@@ -111,6 +112,7 @@ set(publicHeaders
         "threepp/math/Box3.hpp"
         "threepp/math/Capsule.hpp"
         "threepp/math/Color.hpp"
+        "threepp/math/ConvexHull.hpp"
         "threepp/math/Cylindrical.hpp"
         "threepp/math/Euler.hpp"
         "threepp/math/float_view.hpp"
@@ -246,6 +248,7 @@ set(sources
         "threepp/geometries/BoxGeometry.cpp"
         "threepp/geometries/CapsuleGeometry.cpp"
         "threepp/geometries/CircleGeometry.cpp"
+        "threepp/geometries/ConvexGeometry.cpp"
         "threepp/geometries/CylinderGeometry.cpp"
         "threepp/geometries/DecalGeometry.cpp"
         "threepp/geometries/EdgesGeometry.cpp"
@@ -282,6 +285,7 @@ set(sources
         "threepp/math/Box3.cpp"
         "threepp/math/Capsule.cpp"
         "threepp/math/Color.cpp"
+        "threepp/math/ConvexHull.cpp"
         "threepp/math/Cylindrical.cpp"
         "threepp/math/Euler.cpp"
         "threepp/math/Frustum.cpp"
