run code formatting

--- a/src/threepp/renderers/shaders/ShaderChunk.cpp.in
+++ b/src/threepp/renderers/shaders/ShaderChunk.cpp.in
@@ -1,13 +1,11 @@
 
 #include "threepp/renderers/shaders/ShaderChunk.hpp"
 
-@THREEPP_SHADER_INCLUDES@
+@THREEPP_SHADER_INCLUDES @
 
-using namespace threepp::shaders;
+        using namespace threepp::shaders;
 
 ShaderChunk::ShaderChunk() {
 
-@THREEPP_SHADERCHUNK_CODE@
-@THREEPP_SHADERLIB_CODE@
-
+    @THREEPP_SHADERCHUNK_CODE @ @THREEPP_SHADERLIB_CODE @
 }
