add HemisphereLightHelper and OctahedronGeometry

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -63,6 +63,7 @@ set(publicHeaders
         "threepp/geometries/ExtrudeGeometry.hpp"
         "threepp/geometries/IcosahedronGeometry.hpp"
         "threepp/geometries/LatheGeometry.hpp"
+        "threepp/geometries/OctahedronGeometry.hpp"
         "threepp/geometries/PlaneGeometry.hpp"
         "threepp/geometries/PolyhedronGeometry.hpp"
         "threepp/geometries/RingGeometry.hpp"
@@ -80,6 +81,7 @@ set(publicHeaders
         "threepp/helpers/CameraHelper.hpp"
         "threepp/helpers/DirectionalLightHelper.hpp"
         "threepp/helpers/GridHelper.hpp"
+        "threepp/helpers/HemisphereLightHelper.hpp"
         "threepp/helpers/PlaneHelper.hpp"
         "threepp/helpers/PointLightHelper.hpp"
         "threepp/helpers/SpotLightHelper.hpp"
@@ -260,6 +262,7 @@ set(sources
         "threepp/geometries/ExtrudeGeometry.cpp"
         "threepp/geometries/IcosahedronGeometry.cpp"
         "threepp/geometries/LatheGeometry.cpp"
+        "threepp/geometries/OctahedronGeometry.cpp"
         "threepp/geometries/PlaneGeometry.cpp"
         "threepp/geometries/PolyhedronGeometry.cpp"
         "threepp/geometries/RingGeometry.cpp"
@@ -276,6 +279,7 @@ set(sources
         "threepp/helpers/CameraHelper.cpp"
         "threepp/helpers/DirectionalLightHelper.cpp"
         "threepp/helpers/GridHelper.cpp"
+        "threepp/helpers/HemisphereLightHelper.cpp"
         "threepp/helpers/PlaneHelper.cpp"
         "threepp/helpers/PointLightHelper.cpp"
         "threepp/helpers/SpotLightHelper.cpp"
