--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install prerequisites
       run: |
-        sudo apt-get update && apt-get install -y \
+        sudo apt-get update && sudo apt-get install -y \
         libxinerama-dev \
         libxcursor-dev \
         xorg-dev \
