--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,6 +77,7 @@ set(publicHeaders
         "threepp/helpers/AxesHelper.hpp"
         "threepp/helpers/ArrowHelper.hpp"
         "threepp/helpers/Box3Helper.hpp"
+        "threepp/helpers/BoxHelper.hpp"
         "threepp/helpers/CameraHelper.hpp"
         "threepp/helpers/DirectionalLightHelper.hpp"
         "threepp/helpers/GridHelper.hpp"
@@ -279,6 +280,7 @@ set(sources
         "threepp/helpers/ArrowHelper.cpp"
         "threepp/helpers/AxesHelper.cpp"
         "threepp/helpers/Box3Helper.cpp"
+        "threepp/helpers/BoxHelper.cpp"
         "threepp/helpers/CameraHelper.cpp"
         "threepp/helpers/DirectionalLightHelper.cpp"
         "threepp/helpers/GridHelper.cpp"
