--- a/examples/extras/CMakeLists.txt
+++ b/examples/extras/CMakeLists.txt
@@ -8,6 +8,8 @@ target_link_libraries(cubic_bezier_curve PUBLIC threepp)
 if (nlohmann_json_FOUND)
     add_executable(fonts core/fonts.cpp)
     target_link_libraries(fonts PUBLIC threepp)
-endif()
+endif ()
 
-add_subdirectory(physics/agx)
+if (MSVC OR UNIX)
+    add_subdirectory(physics/agx)
+endif ()
