--- a/examples/extras/physics/agx/CMakeLists.txt
+++ b/examples/extras/physics/agx/CMakeLists.txt
@@ -18,14 +18,15 @@ if (AGX_DIR)
         set(AGX_LIBRARIES agxSabre agxModel agxCore agxPhysics)
     endif ()
 
-    message(${AGX_INCLUDE_DIRS})
-    message(${AGX_LIBRARY_DIR})
-
-
     add_executable(agx_test agx_test.cpp)
     target_include_directories(agx_test PUBLIC ${AGX_INCLUDE_DIRS})
     target_link_directories(agx_test PUBLIC ${AGX_LIBRARY_DIR})
     target_link_libraries(agx_test PUBLIC threepp ${AGX_LIBRARIES} imgui::imgui)
+
+    add_executable(twisted_cable twisted_cable.cpp)
+    target_include_directories(twisted_cable PUBLIC ${AGX_INCLUDE_DIRS})
+    target_link_directories(twisted_cable PUBLIC ${AGX_LIBRARY_DIR})
+    target_link_libraries(twisted_cable PUBLIC threepp ${AGX_LIBRARIES} imgui::imgui)
 
 else()
 
