--- a/examples/shaders/CMakeLists.txt
+++ b/examples/shaders/CMakeLists.txt
@@ -1,4 +1,7 @@
 
+add_executable(cubemap_shader cubemap_shader.cpp)
+target_link_libraries(cubemap_shader PUBLIC threepp)
+
 add_executable(raw_shader raw_shader.cpp)
 target_link_libraries(raw_shader PUBLIC threepp)
 
