--- a/examples/loaders/CMakeLists.txt
+++ b/examples/loaders/CMakeLists.txt
@@ -7,6 +7,9 @@ target_link_libraries(obj_loader PUBLIC threepp)
 
 add_executable(svg_loader svg_loader.cpp)
 target_link_libraries(svg_loader PUBLIC threepp)
+if (imgui_FOUND)
+    target_link_libraries(svg_loader PRIVATE imgui::imgui)
+endif ()
 
 if (assimp_FOUND)
     add_executable(assimp_loader assimp_loader.cpp)
