+ Allow imgui to capture mouse and keyboard events + Conditionally compile imgui mouse and keyboard capture support into threepp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -415,6 +415,10 @@ target_link_libraries(threepp
 if (nlohmann_json_FOUND)
     target_link_libraries(threepp PRIVATE nlohmann_json::nlohmann_json)
 endif()
+if(imgui_FOUND)
+  target_link_libraries(threepp PRIVATE imgui::imgui)
+  target_compile_definitions(threepp PUBLIC "THREEPP_WITH_IMGUI")
+endif()
 if (CURL_FOUND)
     target_link_libraries(threepp PRIVATE CURL::libcurl)
     target_compile_definitions(threepp PUBLIC "THREEPP_WITH_CURL")
