--- a/tests/loaders/CMakeLists.txt
+++ b/tests/loaders/CMakeLists.txt
@@ -3,3 +3,5 @@ if (nlohmann_json_FOUND)
     add_test_executable(Fontloader_test)
     target_link_libraries(Fontloader_test PRIVATE nlohmann_json::nlohmann_json)
 endif ()
+
+add_subdirectory(svg)
